# cca-2024

./: .gitignore  README.md  memcache-t1-cpuset-part3.yaml  part1.yaml  part2a.yaml  part2b.yaml  part3.yaml  part4.yaml  pyproject.toml
parsec-benchmarks/part3/: parsec-blackscholes.yaml  parsec-canneal.yaml  parsec-dedup.yaml  parsec-ferret.yaml  parsec-freqmine.yaml  parsec-radix.yaml  parsec-vips.yaml
projects/part1/: plot_part1.ipynb
resources/: memperf.help
results-part3/: plot_task3.py
results-part3/2024-04-30-14-34/: execution_time.txt  mcperf.txt
results-part3/2024-04-30-17-10/: execution_time.txt  mcperf.error  mcperf.txt
results-part3/2024-04-30-17-16/: mcperf.error
results-part3/2024-04-30-17-55/: execution_time.txt  mcperf.error  mcperf.txt
results-part3/2024-04-30-18-17/: mcperf.error
results-part3/2024-05-01-18-07/: mcperf.txt  mcperf_a.txt  (+1 more)
scripts/: create_submission.py  delete.py  install_docker.sh  install_mcperf.sh  job.py  plot.py  plot_all.py  plot_task1.py  plot_task2a.py  plot_task2b.py  plot_task3.py  plot_task4.py  plot_task4A.py  plot_task4B.py  plot_task4_1a.py  plot_task4_1d.py  stats_task3.py  stats_task4.py  task1.py  task2a.py  task2b.py  task3.py  task4.py  task4_config.py  task4_controller.py  task4_controller_coschedule_radix.py  task4_controller_individual_threshold.py  task4_cpu.py  task4_job.py  task4_scheduler_logger.py  utils.py
yaml_files_part3/: memcache-t1-cpuset-part3.yaml  parsec-blackscholes.yaml  parsec-canneal.yaml  parsec-dedup.yaml  parsec-ferret.yaml  parsec-freqmine.yaml  parsec-radix.yaml
(+643 files in other folders)
